2001-10-27  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (scroll_by_amount): fix this so that we never scroll
	farther down the page than we want to (adj->val -
	adj->page_size). Fixes Ximian #2504.

	* htmltokenizer.c (in_entity): always collapse the entity even in
	tags and element names.

	* htmlengine.c (html_engine_destroy): make the engine safe for
	reentrant calls that could result from destroying embedded objects
	that might iterate the main loop. Fixes ximian #13699.

2001-10-26  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (op_copy): handle cspan, rspan
	added few g_return_if_fail's

	* htmlclueflow.c (calc_size): if width_left < 0 and ! firstRun,
	then break line here
	(draw_background): don't call html_object_draw for parent as this
	means we draw itself too (so when flow is drawed from drawing
	queue, it's rendered twice which means uglyness for gdkxft) I've
	tried to reproduce bug #6, for which this was intended as fix, but
	can't reproduce it, so I hope #6 is fixed properly now.

	* htmlobject.c (html_object_is_clue): added HTML_TYPE_CLUEALIGNED,
	which Larry probably forgot commit

2001-10-25  Larry Ewing  <lewing@ximian.com>

        * htmlembedded.c (destroy): clean up the signals and unset the
        object data so that even if the widget lives on if doesn't kill
        us.
        (html_embedded_allocate): rename for the fun of it.
        (html_embedded_new_widget): pass em as object data so that the
        signal will be removed when we destroy.

	* htmltokenizer.c (flush_entity): don't add the TAG_ESCAPE to the
	output when fluhing the entity.
	(in_entity): don't collapse entities in tags or attributes.

	* htmlimage.c (image_update_url): don't do anything if there is no
	map.
	(get_url): return the image->url if final->url is NULL.

2001-10-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (insert_object): use
	html_cursor_jump_to_position_no_spell
	(insert_object_do): ditto
	(insert_object): ditto
